# packaging-valley-makeathon-2025-team1

app/: anomaly_pipeline.py  anomaly_pipeline_fixed.py  detector.py  main.py  model.py  multi_sensor_data.py  multivariate_anomaly_detection_ML_pipeline.py  plot_csv.py  pyproject.toml  simple_db_query.py  test_ml_frameworks.py  torque_over_time.py
